5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1716_2506.log
== TEST (2019-05-14 17:42:44) 
-- CODE:
anos = 0
qti=int(input("Quantidade inicial de Tambaquis: "))
pc=float(input("Percentual de crescimento da quantidade de Tambaquis: "))
qtr=int(input("Quantidade de Tambaquis retirados para venda: "))

while (0 < qti < 12000):
	acr=qti*pc/100
	qti = qti + acrescimo
	qti = qti - qtr
	anos = anos + 1
if (qti == 0):
	print("EXTINCAO")
	print(anos)
else:
	print("LIMITE")
	print(anos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qti = qti + acrescimo
NameError: name 'acrescimo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:43:01) 
-- CODE:
anos = 0
qti=int(input("Quantidade inicial de Tambaquis: "))
pc=float(input("Percentual de crescimento da quantidade de Tambaquis: "))
qtr=int(input("Quantidade de Tambaquis retirados para venda: "))

while (0 < qti < 12000):
	acr=qti*pc/100
	qti = qti + acr
	qti = qti - qtr
	anos = anos + 1
if (qti == 0):
	print("EXTINCAO")
	print(anos)
else:
	print("LIMITE")
	print(anos)

-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:43:09) 
-- CODE:
anos = 0
qti=int(input("Quantidade inicial de Tambaquis: "))
pc=float(input("Percentual de crescimento da quantidade de Tambaquis: "))
qtr=int(input("Quantidade de Tambaquis retirados para venda: "))

while (0 < qti < 12000):
	acr=qti*pc/100
	qti = qti + acr
	qti = qti - qtr
	anos = anos + 1
if (qti == 0):
	print("EXTINCAO")
	print(anos)
else:
	print("LIMITE")
	print(anos)

-- EXECUTION TIME:
0.180596
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:44:55) 
-- CODE:
anos = 0
qti=int(input("Quantidade inicial de Tambaquis: "))
pc=float(input("Percentual de crescimento da quantidade de Tambaquis: "))
qtr=int(input("Quantidade de Tambaquis retirados para venda: "))

while (0 < qti < 12000):
	acr=qti*pc/100
	qti = qti + acr
	qti = qti - qtr
	anos = anos + 1
if (qti == 0):
	print("EXTINCAO")
	print(anos)
else:
	print("LIMITE")
	print(anos)

-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:45:04) 
-- CODE:
anos = 0
qti=int(input("Quantidade inicial de Tambaquis: "))
pc=float(input("Percentual de crescimento da quantidade de Tambaquis: "))
qtr=int(input("Quantidade de Tambaquis retirados para venda: "))

while (0 < qti < 12000):
	acr=qti*pc/100
	qti = qti + acr
	qti = qti - qtr
	anos = anos + 1
if (qti == 0):
	print("EXTINCAO")
	print(anos)
else:
	print("LIMITE")
	print(anos)

-- EXECUTION TIME:
0.162409
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:51:37) 
-- CODE:
anos = 0
qti=int(input("Quantidade inicial de Tambaquis: "))
pc=float(input("Percentual de crescimento da quantidade de Tambaquis: "))
qtr=int(input("Quantidade de Tambaquis retirados para venda: "))

while (0 < qti < 12000):
	acr=qti*pc/100
	qti = qti + acr
	qti = qti - qtr
	anos = anos + 1
if (qti <= 0):
	print("EXTINCAO")
	print(anos)
else:
	print("LIMITE")
	print(anos)

-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:51:44) 
-- CODE:
anos = 0
qti=int(input("Quantidade inicial de Tambaquis: "))
pc=float(input("Percentual de crescimento da quantidade de Tambaquis: "))
qtr=int(input("Quantidade de Tambaquis retirados para venda: "))

while (0 < qti < 12000):
	acr=qti*pc/100
	qti = qti + acr
	qti = qti - qtr
	anos = anos + 1
if (qti <= 0):
	print("EXTINCAO")
	print(anos)
else:
	print("LIMITE")
	print(anos)

-- EXECUTION TIME:
0.19964
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
